; ModuleID = '/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_registry.c_registry_read_maximized.c'
source_filename = "/home/carl/AnghaBench/reactos/base/applications/wordpad/extr_registry.c_registry_read_maximized.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@key_options = common dso_local global i32 0, align 4
@ERROR_SUCCESS = common dso_local global i64 0, align 8
@var_maximized = common dso_local global i32 0, align 4
@FALSE = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @registry_read_maximized(i32* %0) #0 {
  %2 = alloca i32*, align 8
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  store i32* %0, i32** %2, align 8
  store i32 0, i32* %3, align 4
  store i32 4, i32* %4, align 4
  %5 = load i32, i32* @key_options, align 4
  %6 = call i64 @registry_get_handle(i32* %3, i32 0, i32 %5)
  %7 = load i64, i64* @ERROR_SUCCESS, align 8
  %8 = icmp ne i64 %6, %7
  br i1 %8, label %21, label %9

9:                                                ; preds = %1
  %10 = load i32, i32* %3, align 4
  %11 = load i32, i32* @var_maximized, align 4
  %12 = load i32*, i32** %2, align 8
  %13 = ptrtoint i32* %12 to i32
  %14 = call i64 @RegQueryValueExW(i32 %10, i32 %11, i32 0, i32* null, i32 %13, i32* %4)
  %15 = load i64, i64* @ERROR_SUCCESS, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %21, label %17

17:                                               ; preds = %9
  %18 = load i32, i32* %4, align 4
  %19 = sext i32 %18 to i64
  %20 = icmp ne i64 %19, 4
  br i1 %20, label %21, label %24

21:                                               ; preds = %17, %9, %1
  %22 = load i32, i32* @FALSE, align 4
  %23 = load i32*, i32** %2, align 8
  store i32 %22, i32* %23, align 4
  br label %24

24:                                               ; preds = %21, %17
  %25 = load i32, i32* %3, align 4
  %26 = call i32 @RegCloseKey(i32 %25)
  ret void
}

declare dso_local i64 @registry_get_handle(i32*, i32, i32) #1

declare dso_local i64 @RegQueryValueExW(i32, i32, i32, i32*, i32, i32*) #1

declare dso_local i32 @RegCloseKey(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
